<resources>
    <string name="app_name">SoftpointTools</string>
    <string name="app_menu_titulo">Opciones</string>
    <!-- Botones Menu -->
    <string name="btnRecepcionOffLine">Recepcion fuera de linea</string>
    <string name="btnRecepcionOnLine">Recepcion en linea</string>
    <string name="btnInventario">  Toma de Inventario</string>
    <string name="btnConsultaPrecios">  Consulta de Precios</string>
    <string name="btnSalir">  Salir</string>

    <!-- Recepcion off line -->
    <string name="txtAppName">Recepcion Off Line</string>
    <string name="txtNroOc">Ingrese Nro de Orden de Compras</string>
    <string name="txtNroRecepcion">Ingrese Nro de Recepcion</string>

    <string name="btnConfirmar">Confirmar</string>
    <string name="btnVerItems">Ver todos los Items</string>
    <string name="btnItems">Registrar items</string>

</resources>
