<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center|center_horizontal"
            android:text="@string/app_menu_titulo"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnRecepcionOffLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/invent_off_line_24dp"
            android:drawablePadding="5dp"
            android:text="@string/btnRecepcionOffLine"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/btnRecepcionOnLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/invent_on_line_24dp"
            android:text="@string/btnRecepcionOnLine"

            android:textAlignment="textStart" />

        <Button
            android:id="@+id/btnInventario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnInventario" />

        <Button
            android:id="@+id/btnConsultaPrecios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnConsultaPrecios" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSalir" />

    </LinearLayout>

</LinearLayout>