<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReceipOffActivity">

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtAppName"
           android:layout_weight="1"
            android:textSize="26dp"/>
        <TextView
            android:id="@+id/lblUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="26dp"/>

    </LinearLayout>


    <LinearLayout
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/txtNroRecepcion"
            android:layout_height="wrap_content"
            android:hint="@string/txtNroRecepcion"
            android:inputType="textPersonName"
            android:textSize="22dp"
            android:layout_width="fill_parent">
        </EditText>


        <TextView
            android:id="@+id/lblProveedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:hint="Proveedor"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/lblFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:inputType="date"
            android:hint="Fecha"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/lblDeposito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:hint="Deposito Receptor"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnConfirmar" />

        <Button
            android:id="@+id/btnVerItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnVerItems" />

        <Button
            android:id="@+id/btnItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnItems" />

    </LinearLayout>

</LinearLayout>